--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,5 @@
 name: Continuous Integration (CI)
 
-## Run CI jobs on all branches by default
 on:
   push:
   pull_request:
@@ -19,6 +18,9 @@ jobs:
           distribution: "temurin"
           java-version: "21"
           cache: "gradle"
+
+      - name: Grant execute permission to Gradle wrapper
+        run: chmod +x ./gradlew
 
       - name: Run unit tests
         run: ./gradlew test
