--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,9 @@ jobs:
             -Dsonar.projectKey=coupon-service-rizzerve
             -Dsonar.projectName=coupon-service-rizzerve
             -Dsonar.host.url=https://sonarqube.cs.ui.ac.id
+            -Dsonar.java.binaries=build/classes
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: https://sonarqube.cs.ui.ac.id
+
 
