--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -32,17 +32,17 @@ jobs:
             curl -k "https://www.duckdns.org/update?domains=${DUCKDNS_DOMAIN}&token=${DUCKDNS_TOKEN}&ip="
 
             # Step 2: Deploy latest staging code
-            cd ~/menu-service-rizzerve
+            cd ~/coupon-service-rizzerve
             git pull origin staging
             ./gradlew bootJar
-            docker stop menu-service || true
-            docker rm menu-service || true
-            docker build -t menu-service-rizzerve:latest .
-            docker run -d --name menu-service \
+            docker stop coupon-service || true
+            docker rm coupon-service || true
+            docker build -t coupon-service-rizzerve:latest .
+            docker run -d --name coupon-service \
               -p 8080:8080 \
               -e PGHOST='${PGHOST}' \
               -e PGDATABASE='${PGDATABASE}' \
               -e PGUSER='${PGUSER}' \
               -e PGPASSWORD='${PGPASSWORD}' \
-              menu-service-rizzerve:latest
+              coupon-service-rizzerve:latest
           EOF
