--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Disable dialect specification (let Hibernate choose automatically)
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Disable open in view pattern
 spring.jpa.open-in-view=false
@@ -36,3 +36,10 @@ spring.security.enabled=true
 
 # Allow bean definition overriding (as a precaution)
 spring.main.allow-bean-definition-overriding=true
+
+
+management.endpoints.web.exposure.include=*
+
+management.endpoint.health.show-details=always
+management.metrics.tags.application=${spring.application.name}
+
