CHORE : add monitoring files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,8 +38,12 @@ spring.security.enabled=true
 spring.main.allow-bean-definition-overriding=true
 
 
-management.endpoints.web.exposure.include=*
-
+# Actuator endpoints
+management.endpoints.web.exposure.include=health,metrics,prometheus
 management.endpoint.health.show-details=always
-management.metrics.tags.application=${spring.application.name}
 
+# Enable all Prometheus metrics
+management.metrics.enable.all=true
+
+# Add some custom tags
+management.metrics.tags.application=${spring.application.name}
